# C7-WIRE-CRUNCH-EMBEDDED-SYSTEMS

./: C7-WEEK-0.MD  C7-WEEK-1.MD  CONTRIBUTING.md  README.md  _index.json
assets/branding/: BRAND.md
community/: CHARTER.md
curriculum/: SYLLABUS.md
curriculum/week-01-bare-metal-bringup/: README.md
curriculum/week-04-spi-i2c-bus-drivers/: README.md  homework.md  quiz.md  resources.md
curriculum/week-04-spi-i2c-bus-drivers/challenges/: README.md  challenge-01-shared-bus-multiple-devices.md
curriculum/week-04-spi-i2c-bus-drivers/exercises/: README.md  exercise-01-spi-an-oled.md  exercise-02-i2c-a-bmp280.md  exercise-03-bus-driver-abstraction.md
curriculum/week-04-spi-i2c-bus-drivers/lecture-notes/: 01-spi-the-3-wire-bus.md  02-i2c-multi-master-and-addressing.md  03-driver-design-patterns.md
curriculum/week-04-spi-i2c-bus-drivers/mini-project/: README.md
curriculum/week-05-modern-cpp-on-bare-metal/: README.md  homework.md  quiz.md  resources.md
curriculum/week-05-modern-cpp-on-bare-metal/challenges/: README.md  challenge-01-cpp-rewrite-of-uart-driver.md
curriculum/week-05-modern-cpp-on-bare-metal/exercises/: README.md  exercise-01-gpio-template-vs-c-macro.md  exercise-02-cpp-spi-driver-with-concepts.md  exercise-03-mixed-c-and-cpp-translation-units.md
curriculum/week-05-modern-cpp-on-bare-metal/lecture-notes/: 01-cpp20-embedded-subset.md  02-zero-cost-abstractions.md  03-when-c-still-wins.md
curriculum/week-05-modern-cpp-on-bare-metal/mini-project/: README.md
curriculum/week-08-dma-adc-and-ring-buffers/: README.md  homework.md  quiz.md  resources.md
curriculum/week-08-dma-adc-and-ring-buffers/challenges/: challenge-01-the-overrun-forensics.c  challenge-02-aliasing-and-the-input-filter.md
curriculum/week-08-dma-adc-and-ring-buffers/exercises/: SOLUTIONS.md  dma_ring.h  exercise-01-dma-memcpy.c  exercise-02-adc-to-dma-single-shot.c  exercise-03-chain-pingpong.c
curriculum/week-08-dma-adc-and-ring-buffers/lecture-notes/: 01-the-rp2040-dma-controller.md  02-adc-peripheral-and-dma-wiring.md  03-ring-buffers-and-the-spsc-pattern.md
curriculum/week-08-dma-adc-and-ring-buffers/mini-project/: README.md  dma_adc_capture.h  main.c
curriculum/week-09-usb-device-classes-tinyusb/: README.md  homework.md  quiz.md  resources.md
curriculum/week-09-usb-device-classes-tinyusb/challenges/: challenge-01-the-broken-descriptor.c  challenge-02-custom-hid-and-vendor-app.md
curriculum/week-09-usb-device-classes-tinyusb/exercises/: SOLUTIONS.md  exercise-01-cdc-echo.c  exercise-02-hid-keyboard.c  exercise-03-msc-ramdisk.c  usb_descriptors.h
curriculum/week-09-usb-device-classes-tinyusb/lecture-notes/: 01-usb-enumeration-and-descriptors.md  02-cdc-acm-and-hid-on-tinyusb.md  03-msc-ram-disk-and-composite-devices.md
curriculum/week-09-usb-device-classes-tinyusb/mini-project/: README.md  main.c  usb_descriptors.c
curriculum/week-11-wireless-wifi-mqtt-tls/: homework.md  quiz.md
curriculum/week-11-wireless-wifi-mqtt-tls/challenges/: challenge-01-24-hour-soak.md  challenge-02-tls-cert-rotation.md
curriculum/week-11-wireless-wifi-mqtt-tls/mini-project/: CMakeLists.txt  README.md  ca_bundle.h  cc-listen.py  lwipopts.h  main.c  mbedtls_config.h  mqtt_client.c  mqtt_client.h  pico_sdk_import.cmake  requirements.txt
curriculum/week-12-debugging-like-a-senior/: README.md  homework.md  quiz.md  resources.md
curriculum/week-12-debugging-like-a-senior/challenges/: challenge-01-hung-i2c-recovery.md  challenge-02-heisenbug-hunt.md
curriculum/week-12-debugging-like-a-senior/exercises/: SOLUTIONS.md  debug_common.h  exercise-01-gdb-session.c  exercise-02-rtt-logging.c  exercise-03-fault-dump.c
curriculum/week-12-debugging-like-a-senior/lecture-notes/: 01-swd-openocd-and-gdb.md  02-fault-handlers-and-stack-unwinding.md  03-rtt-cycle-counting-and-bus-decoding.md
curriculum/week-12-debugging-like-a-senior/mini-project/: CMakeLists.txt  README.md  cc-debug.py  crash_store.c  crash_store.h  debug_app.c  fault_handler.c  requirements.txt
curriculum/week-13-ble5-and-ble-mesh/: README.md  homework.md  quiz.md  resources.md
curriculum/week-13-ble5-and-ble-mesh/challenges/: challenge-01-sniff-and-crack-pairing.md  challenge-02-coded-phy-range-test.md
curriculum/week-13-ble5-and-ble-mesh/exercises/: SOLUTIONS.md  ble_common.h  exercise-01-advertiser-and-scanner.c  exercise-02-gatt-client-battery.c  exercise-03-mesh-network-pdu.c
curriculum/week-13-ble5-and-ble-mesh/lecture-notes/: 01-ble-stack-gap-and-advertising.md  02-gatt-services-characteristics-and-security.md  03-ble5-features-and-ble-mesh.md
curriculum/week-13-ble5-and-ble-mesh/mini-project/: CMakeLists.txt  README.md  cc-mesh-provision.py  cc_sensor.gatt  gatt_sensor_peripheral.c  mesh_node.c  requirements.txt
curriculum/week-14-lorawan-zigbee-thread-matter/: README.md  homework.md  quiz.md  resources.md
curriculum/week-14-lorawan-zigbee-thread-matter/challenges/: challenge-01-matter-over-thread-lighting-app.md  challenge-02-the-things-network-decoder-and-downlink.md
curriculum/week-14-lorawan-zigbee-thread-matter/exercises/: SOLUTIONS.md  exercise-01-radio-decision-and-802154.c  exercise-02-sx1262-bringup.c  exercise-03-lorawan-uplink-mic.c  lpwan_common.h
curriculum/week-14-lorawan-zigbee-thread-matter/lecture-notes/: 01-the-low-power-radio-landscape.md  02-lorawan-mac-and-the-sx126x-driver.md  03-thread-matter-and-choosing-the-radio.md
curriculum/week-14-lorawan-zigbee-thread-matter/mini-project/: CMakeLists.txt  README.md  cc-ttn-decode.py  lorawan.c  lorawan.h  main.c  secrets.h.example  sx1262.c  sx1262.h
curriculum/week-15-sensors-actuators-and-fusion/challenges/: challenge-01-drift-shootout.md  challenge-02-pid-tuning-on-the-bench.md
curriculum/week-15-sensors-actuators-and-fusion/exercises/: SOLUTIONS.md  (+4 more)
curriculum/week-15-sensors-actuators-and-fusion/mini-project/: CMakeLists.txt  README.md  actuators.c  actuators.h  cc-magcal.py  cc-orientation.py  fusion_node.c  madgwick.c  madgwick.h  requirements.txt
past-sessions/SPRING-2025/: README.MD
resources/setup-guides/: README.md
(+3 files in other folders)
